@@ -20,13 +20,14 @@ package Clustericious::Config::Plugin;
 
 use Hash::Merge qw/merge/;
 use Data::Dumper;
+use Carp qw( croak );
 use strict;
 use warnings;
 use base qw( Exporter );
 
 our $VERSION = '0.23';
 our @mergeStack;
-our @EXPORT = qw( extends_config get_password home );
+our @EXPORT = qw( extends_config get_password home file dir );
 
 =head2 extends_config $config_name, %arguments
 
@@ -85,6 +86,32 @@ sub home (;$)
 {
   require File::HomeDir;
   $_[0] ? File::HomeDir->users_home($_[0]) : File::HomeDir->my_home;
+}
+
+=head2 file( @list )
+
+The C<file> shortcut from Path::Class, if it is installed.
+
+=cut
+
+sub file
+{
+  eval { require Path::Class::File };
+  croak "file helper requires Path::Class" if $@;
+  Path::Class::File->new(@_);
+}
+
+=head2 dir( @list )
+
+The C<dir> shortcut from Path::Class, if it is installed.
+
+=cut
+
+sub dir
+{
+  require Path::Class::Dir;
+  croak "dir helper requires Path::Class" if $@;
+  Path::Class::File->new(@_);
 }
 
 =head1 SEE ALSO
