@@ -1,5 +1,9 @@
 Revision history for Clustericious-Config
 
+        - added home helper for config files
+        - added file helper for config files
+        - added dir helper for config files
+
 0.23    Sun Jul  7 21:27:21 EDT 2013
         - substitute - for :: in config filenames
           for example ~/etc/Clustericious::HelloWorld.conf should now be
